--- a/pkgIndex.tcl.in
+++ b/pkgIndex.tcl.in
@@ -1,5 +1,14 @@
+# -*- tcl -*-
+# Tcl package index file, version 1.1
 #
-# Tcl package index file
-#
-package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ \
-    [list load [file join $dir @PKG_LIB_FILE@] @PACKAGE_NAME@]
+package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ [list apply {
+	dir {
+		if {[package vsatisfies [package provide Tcl] 9.0-]} {
+			set libfile	[file join $dir @PKG_LIB_FILE9@]
+		} else {
+			set libfile	[file join $dir @PKG_LIB_FILE8@]
+		}
+		load $libfile [string totitle @PACKAGE_NAME@]
+		namespace eval ::reuri [list variable libfile $libfile]
+	}
+} $dir]
