Implementing path commands, index parsing, profile guided optimization build support

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "tools/re2c"]
 	path = tools/re2c
 	url = https://github.com/skvadrik/re2c
+[submodule "tools/packcc"]
+	path = tools/packcc
+	url = https://github.com/arithy/packcc
+	branch = "feature/#55-lines"
