Attempt to set tclconfig submodule shallow

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,8 @@
 [submodule "tools/packcc"]
 	path = tools/packcc
 	url = https://github.com/arithy/packcc
-	branch = "feature/#55-lines"
 	shallow = true
 [submodule "tclconfig"]
 	path = tclconfig
 	url = https://github.com/cyanogilvie/tclconfig.git
+	shallow = true
