--- a/Makefile.in
+++ b/Makefile.in
@@ -175,7 +175,6 @@ VALGRINDEXTRA =
 VALGRINDARGS	= --tool=memcheck --num-callers=8 --leak-resolution=high \
 		  --leak-check=yes -v --suppressions=suppressions --keep-debuginfo=yes \
 		  --trace-children=yes $(VALGRINDEXTRA)
-PACKCCARGS	= --lines
 RE2CARGS = --case-ranges -W -Wno-nondeterministic-tags -Wno-match-empty-string --conditions
 PGOGEN_BUILD = -fprofile-generate=prof
 PGO_BUILD = @PGO_BUILD@
@@ -206,7 +205,7 @@ all: binaries libraries doc
 # of the Makefile, in the "BINARIES" variable.
 #========================================================================
 
-binaries: lexers parsers $(BINARIES)
+binaries: lexers $(BINARIES)
 
 libraries:
 
@@ -269,9 +268,6 @@ shell: binaries libraries
 vim-gdb: binaries libraries
 	$(TCLSH_ENV) $(PKG_ENV) vim -c "set number" -c "set mouse=a" -c "set foldlevel=100" -c "Termdebug -ex set\ print\ pretty\ on --args $(TCLSH_PROG) tests/all.tcl $(TESTFLAGS) -singleproc 1 -load package\ ifneeded\ $(PACKAGE_NAME)\ $(PACKAGE_VERSION)\ [list\ load\ `@CYGPATH@ $(PKG_LIB_FILE)`\ [string\ totitle\ $(PACKAGE_NAME)]]" -c "2windo set nonumber" -c "1windo set nonumber" generic/reuri.c
 
-vim-gdb-packcc: tools/bin/packcc
-	vim -c "set number" -c "set mouse=a" -c "set foldlevel=100" -c "Termdebug --args tools/bin/packcc $(PACKCCARGS) -o parsers/packcc_index generic/packcc_index.peg" tools/packcc/src/packcc.c
-
 vim-core:
 	$(TCLSH_ENV) $(PKG_ENV) vim -c 'packadd termdebug' -c "set mouse=a" -c "set number" -c "set foldlevel=100" -c "Termdebug -ex layout\ asm -ex layout\ regs -ex focus\ cmd $(TCLSH_PROG) core" -c Winbar generic/reuri.c
 
@@ -295,17 +291,12 @@ valgrind: binaries libraries
 valgrindshell: binaries libraries
 	$(TCLSH_ENV) $(PKG_ENV) $(VALGRIND) $(VALGRINDARGS) $(TCLSH_PROG) $(SCRIPT)
 
-tools/bin/packcc: tools/packcc/src/packcc.c
-	mkdir -p tools/bin
-	#$(CC_FOR_BUILD) -march=native -O3 -g -o $@ $<
-	$(CC_FOR_BUILD) -DPURIFY -O0 -g -o $@ $<
-
 tools/bin/re2c:
 	mkdir -p tools/bin
 	(cd tools/re2c; ./autogen.sh && ./configure CFLAGS="-march=native -O3" CC="$(CC_FOR_BUILD)" --disable-golang --disable-rust && make)
 	cp tools/re2c/re2c tools/bin
 
-tools: tools/bin/packcc tools/bin/re2c
+tools: tools/bin/re2c
 
 depend:
 
@@ -344,16 +335,7 @@ $(PKG_STUB_LIB_FILE): $(PKG_STUB_OBJECTS)
 # As necessary, add $(srcdir):$(srcdir)/compat:....
 #========================================================================
 
-VPATH = $(srcdir):$(srcdir)/generic:$(srcdir)/unix:$(srcdir)/win:$(srcdir)/macosx:$(srcdir)/parsers:$(srcdir)/lexers
-
-$(filter parsers/%,$(PKG_SOURCES)): parsers/%.c: generic/%.peg tools/bin/packcc
-	@echo "Building parser $@ from $<"
-	mkdir -p parsers
-	tools/bin/packcc $(PACKCCARGS) -o "parsers/$*" "generic/$*.peg"
-	#echo "$$("@AWK@" '/^#$$/ {printf "#line %d \"%s\"\n",NR+1,FILENAME; next;} {print;}' "parsers/$*.c")" > "parsers/$*.c"
-	#echo "$$("@AWK@" '/^#$$/ {printf "#line %d \"%s\"\n",NR+1,FILENAME; next;} {print;}' "parsers/$*.h")" > "parsers/$*.h"
-
-parsers: $(filter parsers/%,$(PKG_SOURCES))
+VPATH = $(srcdir):$(srcdir)/generic:$(srcdir)/unix:$(srcdir)/win:$(srcdir)/macosx:$(srcdir)/lexers
 
 $(filter lexers/%,$(PKG_SOURCES)): lexers/%.c: generic/%.re generic/parse.h tools/bin/re2c
 	mkdir -p lexers
@@ -362,13 +344,10 @@ $(filter lexers/%,$(PKG_SOURCES)): lexers/%.c: generic/%.re generic/parse.h tool
 
 lexers: $(filter lexers/%,$(PKG_SOURCES))
 
-$(patsubst parsers/%.c,%.@OBJEXT@,$(filter parsers/%,$(PKG_SOURCES))): %.@OBJEXT@: parsers/%.c
-	$(COMPILE) -I. -c `echo $<` -o $@
-
 $(patsubst lexers/%.c,%.@OBJEXT@,$(filter lexers/%,$(PKG_SOURCES))): %.@OBJEXT@: lexers/%.c
 	$(COMPILE) -I. -c `echo $<` -o $@
 
-$(patsubst %.c,%.@OBJEXT@,$(filter-out parsers/% lexers/%,$(PKG_SOURCES))): %.@OBJEXT@: %.c
+$(patsubst %.c,%.@OBJEXT@,$(filter-out lexers/%,$(PKG_SOURCES))): %.@OBJEXT@: %.c
 	$(COMPILE) -I. -c `echo $<` -o $@
 
 .c.@OBJEXT@:
