--- a/Makefile.in
+++ b/Makefile.in
@@ -415,6 +415,7 @@ clean:
 	-test -z "$(BINARIES)" || rm -f $(BINARIES)
 	-rm -f *.$(OBJEXT) core *.core
 	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
+	-rm -f *.gcda *.gcno *.gcov
 
 distclean: clean
 	-rm -f *.tab.c
@@ -506,6 +507,9 @@ pgo:
 	rm -rf prof
 	make -C . PGO="$(PGOGEN_BUILD)" clean binaries libraries benchmark
 	make -C . PGO="$(PGO_BUILD)" clean binaries libraries
+
+coverage:
+	make -C . PGO="--coverage" clean binaries libraries test
 
 .PHONY: all binaries clean depend distclean doc install libraries test
 .PHONY: gdb gdb-test valgrind valgrindshell genstubs lexers tools tags
