--- a/generic/reuri.h.in
+++ b/generic/reuri.h.in
@@ -29,7 +29,8 @@ enum reuri_encode_mode {
 	REURI_ENCODE_PATH2,		// More permissive, for segments other than the first relative segment (which can't include ':' to avoid confusion with the scheme)
 	REURI_ENCODE_HOST,
 	REURI_ENCODE_USERINFO,
-	REURI_ENCODE_FRAGMENT
+	REURI_ENCODE_FRAGMENT,
+	REURI_ENCODE_AWSSIG
 };
 
 
