Syncing common tea bits

--- a/Makefile.in
+++ b/Makefile.in
@@ -512,8 +512,8 @@ coverage:
 	make -C . PGO="--coverage" clean binaries libraries test
 
 .PHONY: all binaries clean depend distclean doc install libraries test
-.PHONY: gdb gdb-test valgrind valgrindshell genstubs lexers tools tags
-.PHONY: vim-gdb vim-core vim-gdb-benchmark pgo benchmark
+.PHONY: gdb gdb-test valgrind valgrindshell genstubs lexers tools
+.PHONY: vim-gdb vim-core vim-gdb-benchmark pgo coverage benchmark
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
