--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = tclconfig
 	url = https://github.com/cyanogilvie/tclconfig.git
 	shallow = true
+[submodule "teabase"]
+	path = teabase
+	url = https://github.com/cyanogilvie/teabase
